--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html >
 <html>
 <head>
-<title>Mkulima.com on web</title>
+<title>Smarfa on web</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="js/bootstrap.js"></script>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet">
 <script src="jquery.js"></script>
-<!-- <link rel="manifest" href="manifest.json"> -->
+<link rel="manifest" href="manifest.json"> 
 </head>
 <body>
 	<!--end of header and start of body-->
@@ -16,7 +16,7 @@
 
 		<div>
 	
-		<a href="#" class="navbar-brand navbar-static-top"> Mkulima.com </a>
+		<a href="#" class="navbar-brand navbar-static-top"> Smarfa App</a>
 	
 	  <button class="navbar-toggle" data-toggle = "collapse" data-target=".navheadercollapse"> 
 	
@@ -65,13 +65,13 @@
 			<!--starts footer here-->
   <div class="navbar navbar-default navbar-fixed-bottom">
 <br>
-Mkulima.com on web 
-All Rights Reserved.Copyright Mkulima.com &copy 2018. 
+Smarfa on web 
+All Rights Reserved.Copyright Smarfa &copy 2018. 
 Designed and maintained by <b>Antecode Computers</b>
 
   </div>
-  <!-- <script src="./master.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+  <script src="./master.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
 <script>
